resolved invisible toggler button

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,12 +3,15 @@ body {
   font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
   background-image: url(../images/px_by_Gre3g_@2X.png);
   color: #777777;
+
 }
+
 .container {
-  width: 960px;
-}
+  width:100%;
+  max-width: 960px;
+} 
+
 .navbar {
-  width: 100%;
   margin: 0 auto;
   padding-bottom: 0;
   background-color: #ffffff;
@@ -28,13 +31,13 @@ a:visited {
 a:hover {
   color: #4aaaa5;
   background-color: transparent;
-  text-decoration: underline;
 }
-a:active {
+  a:active {
   color: #777777;
   background-color: transparent;
   text-decoration: underline;
 }
+
 
 h1 {
   color: #4aaaa5;
@@ -44,9 +47,9 @@ h1 {
 
 .card-title {
   color: #4aaaa5;
-}
+} 
 
-#mainBannerName {
+#logo {
   background: #4aaaa5;
   color: #ffffff;
   font-size: 40px;
@@ -55,12 +58,16 @@ h1 {
   margin-bottom: 0;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+
+
 }
 
-#navvy {
+ #navvy {
   border-left: 2px solid #777777;
   border-right: 2px solid #777777;
-}
+} 
 
 .card {
   max-width: 960px;
@@ -68,7 +75,8 @@ h1 {
 }
 
 /*Footer Styling*/
-.card-footer {
+
+ .card-footer {
   border-top: 8px solid #4aaaa5;
   background-color: #666666;
   height: 60px;
@@ -89,16 +97,15 @@ hr {
   margin: auto;
 }
 
-img {
+.badge {
   width: 184px;
   height: auto;
-  border: 0;
-  border-radius: 5px;
-}
+
+} 
 
 .btn {
   background: #4aaaa5;
-  border: none;
+  /* border: none; */
 }
 
 h6 {
@@ -106,7 +113,6 @@ h6 {
   background: #4aaaa5;
   position: relative;
   bottom: 40px;
-
   color: #ffffff;
   padding: 0;
   margin: 10px 0;
